# downloader-hub

./: .dockerignore  .drone.yml  .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml  docker-compose.yml  justfile  rust-toolchain.toml  rustfmt.toml
.bruno/: bruno.json
crates/app/: Cargo.toml
crates/app-actions/: Cargo.toml
crates/app-actions/src/: lib.rs
crates/app-actions/src/actions/: mod.rs
crates/app-actions/src/actions/common/: action_error.rs  action_request.rs  action_result.rs  mod.rs
crates/app-actions/src/actions/handlers/: compact_media.rs  file_rename_to_id.rs  mod.rs  ocr_image.rs  remove_background.rs  split_scenes.rs
crates/app-actions/src/common/: mod.rs  url.rs
crates/app-actions/src/common/request/: mod.rs
crates/app-actions/src/downloaders/: mod.rs
crates/app-actions/src/downloaders/common/: download_request.rs  download_result.rs  mod.rs
crates/app-actions/src/downloaders/handlers/: generic.rs  mod.rs  yt_dlp.rs
crates/app-actions/src/downloaders/handlers/music/: mod.rs  spotifydown.rs  yams.rs
crates/app-actions/src/downloaders/helpers/headers/: content_disposition.rs  mod.rs
crates/app-actions/src/downloaders/helpers/headers/common/: charset.rs  mod.rs
crates/app-actions/src/extractors/: mod.rs
crates/app-actions/src/extractors/common/: extract_info_request.rs  extracted_info.rs  mod.rs
crates/app-actions/src/extractors/handlers/: bsky.rs  fallthough.rs  imgur.rs  instagram.rs  mod.rs  music.rs  reddit.rs  tiktok.rs  tumblr.rs  twitter.rs
crates/app-actions/src/extractors/handlers/activity_pub/: mastodon.rs  misskey.rs  mod.rs  node_info.rs
crates/app-actions/src/fixers/: mod.rs
crates/app-actions/src/fixers/common/: command.rs  crop_filter.rs  fix_request.rs  fix_result.rs  fixer_error.rs  mod.rs
crates/app-actions/src/fixers/handlers/: crop.rs  crop_image.rs  crop_video_bars.rs  file_extensions.rs  file_name.rs  media_formats.rs  mod.rs
crates/app-config/: Cargo.toml
crates/app-config/src/: cli.rs  common.rs  lib.rs  timeframe.rs
crates/app-config/src/conditional/: cli.rs  mod.rs  server.rs  telegram_bot.rs
crates/app-config/src/validators/: directory.rs  file.rs  mod.rs  str.rs  url.rs
crates/app-downloader/: Cargo.toml
crates/app-downloader/src/: handler.rs  lib.rs
crates/app-downloader/src/common/: mod.rs  request.rs
crates/app-downloader/src/downloaders/: generic.rs  imgur.rs  instagram.rs  mastodon.rs  mod.rs  reddit.rs  tiktok.rs  tumblr.rs  twitter.rs  yt_dlp.rs
crates/app-downloader/src/downloaders/activity_pub/: mod.rs
crates/app-downloader/src/downloaders/activity_pub/handlers/: mastodon.rs  misskey.rs  mod.rs  node_info.rs
crates/app-downloader/src/downloaders/music/: mod.rs  spotifydown.rs  yams.rs
crates/app-entities/: Cargo.toml
crates/app-entities/src/: lib.rs
crates/app-entities/src/entities/: client.rs  download_request.rs  download_result.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs
crates/app-entities/src/entity_meta/: client.rs  download_request.rs  download_result.rs  enums.rs  mod.rs
crates/app-entities/src/entity_meta/common/: path.rs
crates/app-fixers/: Cargo.toml
crates/app-fixers/src/: error.rs  lib.rs  util.rs
crates/app-fixers/src/common/: command.rs
crates/app-fixers/src/fixer/: crop.rs  file_extensions.rs  file_name.rs  file_rename_to_id.rs  media_formats.rs  mod.rs  split_scenes.rs
crates/app-helpers/: Cargo.toml
crates/app-helpers/src/: dirs.rs  domain.rs  encoding.rs  ffprobe.rs  file_name.rs  file_time.rs  file_type.rs  futures.rs  id.rs  ip.rs  lib.rs  results.rs  temp_dir.rs  temp_file.rs  trash.rs
crates/app-logger/: Cargo.toml
crates/app-logger/src/: lib.rs
crates/app-tasks/: Cargo.toml
crates/app-tasks/src/: lib.rs
crates/app-tasks/src/cron/: mod.rs
crates/app-tasks/src/cron/tasks/: yt_dlp.rs
crates/app-validators/: Cargo.toml
crates/app-validators/src/ip/: mod.rs
crates/app/src/: db.rs  main.rs
crates/app/src/queue/: mod.rs
crates/app/src/queue/processor/: mod.rs
crates/app/src/server/: mod.rs
crates/app/src/server/app_helpers/: pagination.rs
crates/app/src/server/app_middleware/: auth.rs
crates/app/src/server/app_response/: range_responder.rs
crates/app/src/server/routes/: mod.rs
crates/app/src/server/routes/v1/handlers/admin/: mod.rs
crates/app/src/server/routes/v1/handlers/download/: download_request.rs  mod.rs
crates/app/src/server/routes/v1/middleware/: auth.rs
crates/app/src/service/: client.rs  id.rs  signature.rs
crates/downloader-cli/: Cargo.toml
crates/downloader-cli/src/: main.rs
crates/downloader-hub/: Cargo.toml
crates/downloader-hub/src/: db.rs  main.rs
crates/downloader-hub/src/queue/: mod.rs
crates/downloader-hub/src/queue/processor/: download_request.rs  download_result.rs  mod.rs
crates/downloader-hub/src/server/: mod.rs
crates/downloader-hub/src/server/app_middleware/: auth.rs
crates/downloader-hub/src/server/app_response/: mod.rs  range_responder.rs
crates/downloader-hub/src/server/routes/: index.rs
crates/downloader-hub/src/server/routes/v1/: mod.rs
crates/downloader-hub/src/server/routes/v1/handlers/download/: download_result.rs
crates/downloader-hub/src/service/: client.rs  download_request.rs  download_result.rs  file.rs  id.rs  signature.rs
crates/downloader-telegram-bot/: Cargo.toml
crates/downloader-telegram-bot/src/: main.rs
crates/downloader-telegram-bot/src/bot/: mod.rs
crates/downloader-telegram-bot/src/bot/helpers/: mod.rs  status_message.rs
crates/downloader-telegram-bot/src/queue/: mod.rs
crates/downloader-telegram-bot/src/queue/common/: file.rs  mod.rs  urls.rs
crates/downloader-telegram-bot/src/queue/processor/: mod.rs
crates/downloader-telegram-bot/src/queue/processor/handlers/: mod.rs
crates/downloader-telegram-bot/src/queue/processor/handlers/action_request/: mod.rs
crates/downloader-telegram-bot/src/queue/processor/handlers/download_request/: mod.rs
crates/downloader-telegram-bot/src/queue/processor/handlers/fix_request/: mod.rs
crates/downloader-telegram-bot/src/queue/task/: mod.rs
(+50 files in other folders)
