[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.5.0"
authors = ["Allypost"]
description = "A meme downloader"
edition = "2021"
license = "MPL-2.0"

[workspace.dependencies]
app-config = { version = "*", path = "crates/app-config" }
app-downloader = { version = "*", path = "crates/app-downloader" }
app-fixers = { version = "*", path = "crates/app-fixers" }
app-helpers = { version = "*", path = "crates/app-helpers" }
app-logger = { version = "*", path = "crates/app-logger" }
anyhow = "1.0.86"
once_cell = { version = "1.19.0", features = ["parking_lot"] }
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "fs"] }
tracing = { version = "0.1.40" }

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
module_name_repetitions = "allow"
single_match_else = "allow"
manual_let_else = "allow"
uninlined_format_args = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
no_effect_underscore_binding = "allow"
cognitive_complexity = "allow"

[profile.release]
strip = true
# opt-level = "s"
lto = "thin"
