[package]
name = "app-actions"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
app-config.workspace = true
app-helpers.workspace = true
app-logger.workspace = true
async-trait.workspace = true
encoding_rs = "0.8.34"
filetime = "0.2.24"
form_urlencoded = "1.2.1"
fs_extra = "1.3.0"
futures.workspace = true
http = "1.1.0"
http-serde = "2.1.1"
image = "0.25.2"
infer = "0.16.0"
language-tags = "0.3.2"
mime2ext = "0.1.53"
num_cpus = "1.16.0"
once_cell.workspace = true
percent-encoding = "2.3.1"
rayon = "1.10.0"
regex = "1.10.6"
reqwest = { version = "0.12.5", default-features = false, features = ["blocking", "json", "deflate", "gzip", "brotli", "rustls-tls", "trust-dns", "cookies"] }
resolve-path = "0.1.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tl = "0.7.8"
tokio.workspace = true
tracing.workspace = true
unicode-segmentation = "1.11.0"
url.workspace = true
zip = { version = "2.1.6", default-features = false, features = ["aes-crypto", "deflate", "deflate64", "lzma", "time", "zstd"] }

[lints]
workspace = true
