[package]
name = "app-config"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.20", features = ["derive", "env"] }
clap_complete = "4.5.35"
directories = "5.0.1"
once_cell.workspace = true
resolve-path = "0.1.0"
serde.workspace = true
serde_json.workspace = true
toml = "0.8.19"
url.workspace = true
validator = { version = "0.18.1", features = ["derive"] }
which = "6.0.3"

[features]
default = []
server = []
cli = []
telegram-bot = []

[lints]
workspace = true
