[package]
name = "app-downloader"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
app-fixers.workspace = true
app-logger.workspace = true
rayon = "1.10.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive", "alloc"] }
serde_json = { version = "1.0.120", features = ["alloc", "preserve_order"] }
reqwest = { version = "0.12.5", default-features = false, features = [
  "blocking",
  "json",
  "deflate",
  "gzip",
  "brotli",
  "rustls-tls",
  "trust-dns",
  "cookies",
] }
url = "2.5.2"
app-config.workspace = true
app-helpers.workspace = true
unicode-segmentation = "1.11.0"
tl = "0.7.8"
mime2ext = "0.1.52"
thiserror.workspace = true
async-trait = "0.1.80"
once_cell.workspace = true
http-serde = "2.1.1"
http = "1.1.0"
form_urlencoded = "1.2.1"
tracing.workspace = true

[lints]
workspace = true
