[package]
name = "app-entities"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
chrono.workspace = true
http = "1.1.0"
http-serde = "2.1.1"
sea-orm = "1.0.0"
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
