[package]
name = "app-fixers"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
app-config.workspace = true
filetime = "0.2.23"
fs_extra = "1.3.0"
app-helpers.workspace = true
image = "0.25.1"
infer = "0.16.0"
app-logger.workspace = true
rayon = "1.10.0"
resolve-path = "0.1.0"
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
futures = { version = "0.3.30", features = ["thread-pool"] }
async-trait = "0.1.80"
once_cell.workspace = true

[lints]
workspace = true
