[package]
name = "app-helpers"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
app-config.workspace = true
app-logger.workspace = true
serde.workspace = true
serde_json.workspace = true
trash = "5.0.0"
futures = { version = "0.3.30", features = ["thread-pool"] }
tokio.workspace = true
thiserror.workspace = true
tryhard = "0.5.1"
infer = "0.16.0"
tree_magic_mini = "3.1.5"
file-format = { version = "0.25.0", features = ["reader"] }
mime = "0.3.17"

[lints]
workspace = true
