[package]
name = "app-helpers"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
app-config.workspace = true
serde.workspace = true
serde_json.workspace = true
trash = "5.2.0"
futures.workspace = true
tokio.workspace = true
thiserror.workspace = true
tryhard = "0.5.1"
infer = "0.16.0"
tree_magic_mini = "3.1.6"
file-format = { version = "0.25.0", features = ["reader"] }
mime = "0.3.17"
addr = "0.15.6"
url.workspace = true
ipnet = "2.10.1"
iprange = "0.6.7"
once_cell.workspace = true
dns-lookup = "2.0.4"
filetime = "0.2.25"
tracing.workspace = true

[lints]
workspace = true
