[package]
name = "app-logger"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "local-time", "serde", "json", "parking_lot"] }

[lints]
workspace = true
