[package]
name = "app-logger"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "parking_lot", "smallvec"] }

[lints]
workspace = true
