[package]
name = "app-tasks"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
app-config.workspace = true
app-logger.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
