[package]
name = "app-validators"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
dns-lookup = "2.0.4"
ipnet = "2.9.0"
iprange = "0.6.7"
once_cell.workspace = true
thiserror.workspace = true
url = { version = "2.5.0", features = ["serde"] }

[lints]
workspace = true
