[package]
name = "downloader-hub"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
app-config.workspace = true
app-downloader.workspace = true
app-entities.workspace = true
app-fixers.workspace = true
app-helpers.workspace = true
app-logger.workspace = true
app-migration.workspace = true
app-validators = { version = "0.4.0", path = "../app-validators" }
axum = { version = "0.7.4", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.2", features = ["erased-json", "form", "multipart", "typed-header"] }
chrono = { version = "0.4.33", features = ["alloc", "serde"] }
deadqueue = "0.2.4"
dotenvy = "0.15.7"
file-format = { version = "0.24.0", features = ["reader"] }
futures = { version = "0.3.30", features = ["thread-pool"] }
hmac = "0.12.1"
http-range-header = "0.4.0"
infer = "0.15.0"
listenfd = "1.0.1"
once_cell.workspace = true
sea-orm = { version = "0.12.14", features = ["macros", "sqlx-postgres", "runtime-tokio-rustls", "debug-print", "sea-orm-internal"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
thiserror.workspace = true
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["full"] }
tracing.workspace = true
tree_magic_mini = "3.0.3"
ulid = { version = "1.1.2", features = ["postgres"] }
url = { version = "2.5.0", features = ["serde"] }

[lints]
workspace = true
