[package]
name = "downloader-hub"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
app-server = { version = "*", path = "../app-server", optional = true }
serde.workspace = true
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true

[features]
default = []
server = ["app-server"]
cli = []
