[package]
name = "downloader-cli"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-actions.workspace = true
app-config = { workspace = true, features = ["cli"] }
app-logger.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "json",
    "local-time",
    "time",
    "parking_lot",
] }
url.workspace = true

[lints]
workspace = true
