[package]
name = "downloader-hub"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
app-actions.workspace = true
app-config = { workspace = true, features = ["server"] }
app-entities = { version = "*", path = "../app-entities" }
app-helpers.workspace = true
app-logger.workspace = true
app-migration = { version = "*", path = "../app-migration" }
app-tasks.workspace = true
axum = { version = "0.7.5", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.3", features = [
    "erased-json",
    "form",
    "multipart",
    "typed-header",
] }
chrono.workspace = true
deadqueue = "0.2.4"
dotenvy = "0.15.7"
futures.workspace = true
hmac = "0.12.1"
http-range-header = "0.4.1"
listenfd = "1.0.1"
once_cell.workspace = true
sea-orm = { version = "1.0.0", features = [
    "macros",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
    "sea-orm-internal",
] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
thiserror.workspace = true
tokio.workspace = true
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing.workspace = true
ulid = { version = "1.1.3", features = ["postgres"] }
url.workspace = true

[lints]
workspace = true
