[package]
name = "downloader-telegram-bot"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
app-actions.workspace = true
app-config = { workspace = true, features = ["telegram-bot"] }
app-helpers.workspace = true
app-logger.workspace = true
app-tasks.workspace = true
async-trait.workspace = true
chrono.workspace = true
deadqueue = "0.2.4"
dotenvy = "0.15.7"
dptree = "0.3.0"
futures.workspace = true
once_cell.workspace = true
parking_lot = "0.12.3"
serde_json.workspace = true
teloxide = { version = "0.13.0", default-features = false, features = ["cache-me", "macros", "rustls", "trace-adaptor"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ulid = "1.1.3"
url.workspace = true

[lints]
workspace = true
